[tool.poetry]
name = "lunarcalendar"
version = "0.1.0"
description = ""
authors = ["xiaotong <xiaotong.xiang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
icalendar = "^5.0.11"
lunarsolarconverter = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
